--- a/.github/workflows/tests_on_pr.yaml
+++ b/.github/workflows/tests_on_pr.yaml
@@ -7,12 +7,22 @@ on:
 
 jobs:
   test:
+    name: backend tests
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Cache Dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cache/pip
+            ~/virtualenvs
+          key: ${{ runner.os }}-pip-${{ hashFiles('backend/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
